# gsplat-viewer

./: Cargo.toml  README.md  index.html  style.css
src/: gsplat.rs  lib.rs  main.rs  parser.rs  renderer.rs  webgpu.rs
