[package]
name = "gsplat-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlCanvasElement", "console", "Navigator", "CanvasRenderingContext2d"] }
wgpu = { version = "25.0.2", features = ["webgl"] }
winit = "0.30.11"
console_error_panic_hook = "0.1"
js-sys = "0.3.77"
